--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  //opacity: 0.9;
   visibility: hidden;
 
   &.show {
@@ -63,7 +63,7 @@
   &-nav {
     margin: 0;
     padding: 0;
-    background: darken($primary-color, 5);
+    background: rgba(darken($primary-color, 5), 0.9);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -75,7 +75,7 @@
   }
   // Branding side
   &-branding {
-    background: $primary-color;
+    background: rgba($primary-color, 0.9);
     @include easeOut;
     transform: translate3d(0, 100%, 0);
 
